# cpp_projects

./: .gitignore  README.md
CGPA_Calc/: CMakeLists.txt
CGPA_Calc/docs/: README.md
CGPA_Calc/include/: course.h  course.hpp  gpa_calc.hpp
CGPA_Calc/src/: course.cpp  gpa_calc.cpp  user_interface.cpp
CGPA_Calc/tests/: CMakeLists.txt  basic_tests.cpp  gpa_calc_tests.cpp
